[package]
name = "dns-ptr-resolver"
version = "1.0.0"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2021"
rust-version = "1.67.0"  # MSRV
description = "A program to resolve DNS IPs to PTRs"
homepage = "https://github.com/wdes/dns-ptr-resolver#readme"
repository = "https://github.com/wdes/dns-ptr-resolver"
readme = "README.md"
keywords = ["dns", "ptr", "resolver"]
categories = ["command-line-utilities"]
license = "MPL-2.0"
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/LICENSE",
]

[[bin]]
name = "dns-ptr-resolver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
trust-dns-client = { version = "*", default-features = false }
rustdns = "0.4.0"
