[package]
name = "dns-ptr-resolver"
version = "1.2.0-dev"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2021"
rust-version = "1.67.0"  # MSRV
description = "A program to resolve DNS IPs to PTRs"
homepage = "https://github.com/wdes/dns-ptr-resolver/tree/v1.2.0-dev#readme"
repository = "https://github.com/wdes/dns-ptr-resolver"
readme = "README.md"
keywords = ["dns", "ptr", "resolver"]
categories = ["command-line-utilities"]
license = "MPL-2.0"
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/LICENSE",
]

[badges]
github = { repository = "dns-ptr-resolver", branch = "master" }
is-it-maintained-issue-resolution = { repository = "dns-ptr-resolver" }
is-it-maintained-open-issues = { repository = "dns-ptr-resolver" }
maintenance = { status = "passively-maintained" }

[[bin]]
name = "dns-ptr-resolver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
trust-dns-client = { version = "0.22.0", default-features = false }
rustdns = "0.4.0"
weighted-rs = "0.1.3"
